@@ -1,3 +1,9 @@
+2007-05-12  Paul Emsley  <emsley@localhost>
+
+	* src/c-interface-build.cc (get_monomer): check that the library
+	does not provide the restraints for the given 3-letter-code before
+	passing to the libcheck function [Judit Debreczeni].
+
 2007-05-04  Paul Emsley  <emsley@localhost>
 
 	* src/molecule-class-info.cc: (anisotropic_atoms): Add in cholesky
